<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="match_parent"
 android:layout_height="match_parent">
 <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@android:color/black"
    >

    <TextView
        android:id="@+id/holeLegend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/hole_legend"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="@dimen/ExtraLarge" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button"
            android:text="@string/hole_minus"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/ExtraLarge" />

        <TextView
            android:id="@+id/holeNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/hole_num"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textSize="@dimen/ExtraLarge" />

        <Button
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button"
            android:text="@string/hole_plus"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/ExtraLarge" />

    </LinearLayout>

    <TextView
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:text="@string/hole_back"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="@dimen/ExtraLarge"
        android:textStyle="bold"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/middle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:text="@string/hole_middle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="@dimen/ExtraLarge"
        android:textStyle="bold"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/front"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:text="@string/hole_front"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="@dimen/ExtraLarge"
        android:textStyle="bold"
        android:typeface="monospace" />

</LinearLayout>
</ScrollView>